--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ $(document).ready(function() {
 		<input hidden name="xcode" value="003">
 		<input hidden name="mcode" value="001">
 		<input hidden name="typep" value="Y">
-        	<input hidden name="ordertype" value="baro|parent.|layer">
+        	<input hidden name="ordertype" value="">
         	<input hidden name="brandcode" value="">
 		<input hidden name="branduid" value="">
         	<input hidden name="opt_type" value="PS">
@@ -52,6 +52,7 @@ $(document).ready(function() {
 		<input hidden id="size" name="option[basic][0][0][opt_value]" value="">
 		<input hidden name="option[basic][0][0][opt_stock]" value="1">
 		<input hidden id="index" name="option[basic][0][0][sto_id]" value="">
+		<input hidden id="amount[]" value="1">
 		<!--<input  name="_multi_ea[]" value="1">
 		<input  name="multi_ea[]" value="1">
 		<input  name="multi_ea[0][]" value="235">
