--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ $(document).ready(function() {
 		$("input[id=size]").val(vars.size);
 		$("input[id=index]").val(vars.index);
                 $('#form').attr('action', 'http://www.atmos-seoul.com/shop/basket.html');
-                $('#form').submit();
+                //$('#form').submit();
         }
 })
 </script>
