--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(document).ready(function() {
 		<input  name="multi_ea[0][]" value="235">
 		<input  name="multi_ea[0][]" value="">-->
 		
- <input type="submit" value="Add To Cart">
+ <input hidden type="submit" value="Add To Cart">
 </form>
 
 
