--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ $(document).ready(function() {
 </head>
 <body>
 
-<center><h1>ATMOS KR Carting...for CookSSOM</h1></center>
+<center><h1>ATMOS KR Carting...</h1></center>
 
 <form name="form" id="form" action="http://www.atmos-seoul.com/shop/basket.html" method="post">
 		<input hidden name="xcode" value="003">
