--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
 <form name="form" id="form" action="http://www.atmos-seoul.com/shop/basket.html" method="post">
 		<input hidden name="xcode" value="003">
 		<input hidden name="mcode" value="001">
-		<input hidden name="typep" value="Y">
+		<input hidden name="typep" value="N">
 	        <input hidden name="ordertype" value="baro|parent.|layer">
 	        <input hidden name="brandcode" value="">
 		<input hidden name="branduid" value="">
