--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@ $(document).ready(function() {
 		<input hidden name="branduid" value="">
 	        <input hidden name="opt_type" value="PS">
 		<input hidden name="amount[]" value="1">
-		<input hidden name="option[basic][0][0][opt_id]" value="2">
-		<input hidden name="option[basic][0][0][opt_value]" value="[atmos seoul]">
+		<input hidden name="option[basic][0][0][opt_id]" value="1">
+		<input hidden id="size" name="option[basic][0][0][opt_value]" value="">
 		<input hidden name="option[basic][0][0][opt_stock]" value="1">
-		<input hidden name="option[basic][0][0][sto_id]" value="0">
-		<input hidden name="option[basic][0][1][opt_id]" value="1">
+		<input hidden id="index" name="option[basic][0][0][sto_id]" value="">
+		<!--<input hidden name="option[basic][0][1][opt_id]" value="1">
 		<input hidden id="size" name="option[basic][0][1][opt_value]" value="">
 		<input hidden name="option[basic][0][1][opt_stock]" value="1">
 		<input hidden id="index" name="option[basic][0][1][sto_id]" value="">
-		<!--<input  name="_multi_ea[]" value="1">
+		<input  name="_multi_ea[]" value="1">
 		<input  name="multi_ea[]" value="1">
 		<input  name="multi_ea[0][]" value="235">
 		<input  name="multi_ea[0][]" value="">-->
