--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
                 $("input[name=branduid]").val(vars.id);
 				$("input[id=size]").val(vars.size);
 				$("input[id=index]").val(vars.index);
-                $('#form').attr('action', 'http://www.atmos-seoul.com/shop/basket.html');
+                $('#form').attr('action', 'https://www.atmos-seoul.com/shop/basket.html');
                 $('#form').submit();
         }
 })
@@ -36,7 +36,7 @@ $(document).ready(function() {
 
 <center><h1>ATMOS KR Carting...</h1></center>
 
-<form name="form" id="form" action="http://www.atmos-seoul.com/shop/basket.html" method="post">
+<form name="form" id="form" action="https://www.atmos-seoul.com/shop/basket.html" method="post">
 		<input hidden name="xcode" value="003">
 		<input hidden name="mcode" value="001">
 		<input hidden name="typep" value="X">
